# credit_fairness_study

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: credit_fairness_demo.ipynb  exploration.ipynb
results/: README.md
results/20251112_175008/baseline/: metrics.csv
results/20251112_175008/sanity_with_vs_without_proxy/: metrics.csv
results/20251112_175645/: README.md
results/20251112_181121/lambda_sweep/: metrics.csv
results/20251112_182507/lambda_sweep/: metrics.csv
results/20251112_184018/: README.md
results/20251112_184018/fixed_rate/: metrics.csv
results/auto/: README.md
results/auto/20251113_180630/: README.md  baseline_results.csv
results/credit/: README.md
src/: config.py  data_generation.py
src/auto/: __init__.py  data_generation_auto.py
src/common/: __init__.py  feature_spec.py
src/credit/: __init__.py  data_generation_credit.py
src/evaluation/: fairness.py  metrics.py  reporting.py  thresholds.py
src/experiments/: auto_baseline_utils.py  run_baseline.py  run_fixed_rate_comparison.py  run_health_baseline.py  run_lambda_sweep.py  run_life_baseline.py  run_mortgage_baseline.py  run_sanity_checks.py
src/experiments/auto/: __init__.py  (+7 more)
src/health/: __init__.py  data_generation_health.py
src/life/: __init__.py  data_generation_life.py
src/models/: adv_nn_model.py  glm_model.py  nn_model.py
src/mortgage/: __init__.py  data_generation_mortgage.py
src/products/: __init__.py
src/training/: train_adv_nn.py  train_glm.py  train_nn.py
tests/: test_data_generation.py  test_metrics.py  test_models.py
(+29 files in other folders)
